deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-landing
  namespace: default
  labels:
    app: route-landing
spec:
  port:
    targetPort: route-landing
  tls:
    termination: edge
  to:
    kind: Service
    name: route-landing
    weight: 100
